feat: interactive CLI defaults and Datalevin-ready uberjar build
Make the agent REPL interactive by default with session memory on, and
pack Datalevin JVM flags into dev aliases, jar manifest, and a launcher script.

Co-authored-by: Cursor <cursoragent@cursor.com>